--- a/style.css
+++ b/style.css
@@ -45,121 +45,46 @@ h1 {
 /* Button color */
 
 #happy_button {
-  background: #f7ff00; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #db36a4,
-    #f7ff00
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #db36a4,
-    #f7ff00
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #ff69b4;
 }
 
 #sad_button {
-  background: #bdc3c7; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #2c3e50,
-    #bdc3c7
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #2c3e50,
-    #bdc3c7
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #8bc6ec;
+  background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
 }
 
 #excited_button {
-  background: #1e9600; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #ff0000,
-    #fff200,
-    #1e9600
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #ff0000,
-    #fff200,
-    #1e9600
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #85ffbd;
+  background-image: linear-gradient(45deg, #85ffbd 0%, #fffb7d 100%);
 }
 
 #tired_button {
-  background: #bbd2c5; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #292e49,
-    #536976,
-    #bbd2c5
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #292e49,
-    #536976,
-    #bbd2c5
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #ff3cac;
+  background-image: linear-gradient(
+    225deg,
+    #ff3cac 0%,
+    #784ba0 50%,
+    #2b86c5 100%
+  );
 }
 
 #scared_button {
-  background: #59c173; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #5d26c1,
-    #a17fe0,
-    #59c173
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #5d26c1,
-    #a17fe0,
-    #59c173
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #a9c9ff;
+  background-image: linear-gradient(180deg, #a9c9ff 0%, #ffbbec 100%);
 }
 
 #anxious_button {
-  background: #334d50; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #cbcaa5,
-    #334d50
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #cbcaa5,
-    #334d50
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #00dbde;
+  background-image: linear-gradient(90deg, #00dbde 0%, #ff0058 100%);
 }
 
 #confused_button {
-  background: #fc466b; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #3f5efb,
-    #fc466b
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #3f5efb,
-    #fc466b
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
 }
 
 #bored_button {
-  background: #ccccb2; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #757519,
-    #ccccb2
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #757519,
-    #ccccb2
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #d8bfd8;
 }
 
 #again {
