--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .navbar-brand {
   text-align: center;
+  font-size: 2em;
 }
 
 main {
@@ -15,7 +16,8 @@ h1 {
 }
 
 #quote_body {
-  color: rgb(245, 224, 35);
+  /* color: rgb(245, 224, 35); */
+  color: #fff;
 }
 
 /* Classes for display/hide elements */
@@ -80,9 +82,11 @@ h1 {
 }
 
 #again {
+  display: none;
   margin: 0px auto;
-  background: rgb(243, 198, 113);
-  color: white;
+  background: #e3f2fd;
+  color: rgba(0, 0, 0, .9);
+  margin: 2em auto;
 }
 
 /* Blockquote styling */
@@ -108,6 +112,18 @@ blockquote:before {
   left: -20px;
   top: -20px;
   color: #7a7a7a;
+}
+
+blockquote:after {
+  display: block;
+  padding-left: 10px;
+  content: "\201C";
+  font-size: 80px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  color: #7a7a7a;
+  transform: rotate(180deg);
 }
 
 blockquote cite {
